<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Dashboard Fragment -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.thirdapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboardFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_dashboardFragment_to_notificationsFragment"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_dashboardFragment_to_mlFragment"
            app:destination="@id/mlFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_agentHomeFragment"
            app:destination="@id/agentHomeFragment" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.thirdapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_mlFragment"
            app:destination="@id/mlFragment" />
        <action
            android:id="@+id/action_homeFragment_to_agentHomeFragment"
            app:destination="@id/agentHomeFragment" />
    </fragment>

    <!-- Notifications Fragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.thirdapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- ML Fragment -->
    <fragment
        android:id="@+id/mlFragment"
        android:name="com.example.thirdapplication.ui.Machine_Learning.ML_Fragment"
        android:label="Weather Report"
        tools:layout="@layout/fragment_ml" />

    <!-- Event Fragment -->
    <fragment
        android:id="@+id/eventFragment"
        android:name="com.example.thirdapplication.ui.Events.EventFragment"
        android:label="Events Display"
        tools:layout="@layout/fragment_event" />

    <!-- Agent Home Fragment -->
    <fragment
        android:id="@+id/agentHomeFragment"
        android:name="com.example.thirdapplication.ui.home.AgentHomeFragment"
        android:label="Agent Home"
        tools:layout="@layout/fragment_agent_home" />

</navigation>
