<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/login_bg"
    tools:context=".RegisterActivity">

    <TextView
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/usernameCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <!-- Email Input for registration -->
    <androidx.cardview.widget.CardView
        android:id="@+id/usernameCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <!-- Name Input for registration -->
    <androidx.cardview.widget.CardView
        android:id="@+id/nameCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCardView">

        <EditText
            android:id="@+id/name"
            android:hint="Name"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />
    </androidx.cardview.widget.CardView>

    <!-- Mobile Number Input for registration -->
    <androidx.cardview.widget.CardView
        android:id="@+id/mobileCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCardView">

        <EditText
            android:id="@+id/mobile"
            android:hint="Mobile no."
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />
    </androidx.cardview.widget.CardView>

    <!-- Password Input for registration -->
    <androidx.cardview.widget.CardView
        android:id="@+id/passwordCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCardView">

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/darkblue"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCardView" />

    <!-- Click to Login TextView -->

    <!-- Guest Login TextView -->
    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/click_to_login"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/guestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Guest Login"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginNow"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/isAgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="For Agent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:buttonTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCardView"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
