<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/white">

    <!-- _____________ MAIN SECTION _____________ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- _____________ TOP SECTION [Above Weather Card] _____________ -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <!--  User Icon  -->
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/user_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <!--  User Email  -->
            <TextView
                android:id="@+id/userEmailTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="User Email Id"
                android:textColor="@color/darkblue"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <!--  Logout Txt  -->
            <TextView
                android:id="@+id/LogoutTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:textColor="@color/darkblue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userEmailTxtView"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- _____________ TOP SECTION [Weather Card] _____________ -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Card Layout  -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Weather_Card"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_margin="16dp"
                android:background="@drawable/card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906">

                <!--  Weather Icon  -->

                <!-- Weather Text 1 -->

                <!-- Weather Text 2 -->

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="155dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/cloudy_sunny"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/weatherTxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/mostly_cloudy"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/currect_Temp_View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_28_c"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="63sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

                <TextView
                    android:id="@+id/high_Log_View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/h_33_l_L_25"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currect_Temp_View" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- _____________ Mini Icon Section [Below Card] _____________ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <!-- 1st mini icon -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@drawable/mini_icon_bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_alert"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Alerts"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- 2nd mini icon -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@drawable/mini_icon_bg_home"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_routes"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Safe Routes"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- 3rd mini icon -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@drawable/mini_icon_bg_home"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_tips"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Safety Tips"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- 4th mini icon -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="78dp"
                android:layout_weight="0.25"
                android:background="@drawable/mini_icon_bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/etc"
                    android:layout_marginTop="5dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="View all"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

        <!-- _____________ Main Icon Section _____________ -->
        <!-- Domain -> Repository -> ViewModel -> Adapter -> -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainIconView"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
